--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,307 @@
-/* место для вашего кода */
+body {
+  background-color: rgb(220, 220, 220);
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  padding: 90px 50px 96px;
+  font-weight: 400;
+  font-size: 18px;
+  text-underline-offset: 4px;
+  background-color: #fff;
+}
+
+.cover {
+  position: relative;
+  padding: 165px 50px 50px;
+  background-image: url(../images/cover.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.lots {
+  padding: 180px 24px 120px;
+  background: #fff;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  gap: 25px;
+  padding: 0 24px 180px;
+  background: #fff;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: start;
+  padding: 0 50px 82px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.3;
+  background-color: #fff;
+}
+
+.text_black {
+  color: #000;
+}
+
+.text_white {
+  color: #fff;
+}
+
+.header__menu {
+  line-height: 21.13px;
+}
+
+.header__logo {
+  display: block;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 32px;
+  white-space: nowrap;
+}
+
+.header__links-list-item {
+  text-transform: lowercase;
+  list-style: circle;
+}
+
+.header__link_active {
+  text-decoration: none;
+  list-style-type: none;
+}
+
+.address {
+  justify-self: end;
+  box-sizing: border-box;
+  width: 240px;
+  margin: 0;
+  padding: 0;
+  font-style: normal;
+  line-height: 1.35;
+  text-underline-offset: 4px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0 , .5);
+}
+
+.section_content {
+  position: relative;
+  z-index: 2;
+}
+
+.cover__title {
+  margin-bottom: 106px;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 1.28;
+  text-transform: uppercase;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 1.28;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 30px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.aligned-text {
+  display: block;
+  width: 100%;
+  text-align: left;
+}
+
+.aligned-text_center {
+  padding-left: 30px;
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.bet-button {
+  border: 1px solid white;
+  padding: 12px 32px 11px 31px;
+  color: #fff;
+  font-family: 'Raleway';
+  text-transform: uppercase;
+  background: transparent;
+}
+
+.section__title {
+  color: #000;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.174;
+  text-transform: uppercase;
+}
+
+.more_info_link {
+  margin-left: 40px;
+  color: #000;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.174;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 5px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.lots__heading {
+  margin-bottom: 27px;
+  margin-left: 40px;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: start;
+  gap: 25px;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 100%;
+  margin-bottom: 30px;
+}
+
+.card-link, 
+.card {
+  height: 100%;
+  text-decoration: none;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 48px 40px;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card__title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.2;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 4px;
+  text-transform: uppercase;
+}
+
+.card__text {
+  margin-top: 30px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
+  text-decoration: none;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  margin-top: 35px;
+  margin-left: 47px;
+  border-radius: 240px;
+  background-color: #000;
+}
+
+.about__logo-image {
+  width: 148px;
+}
+
+.about__column {
+  margin-top: 136px;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-top: 100px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.footer__address {
+  justify-self: start;
+}
+
+.footer__menu {
+  text-align: center;
+}
+
+.footer__menu-link {
+  text-decoration: underline;
+}
+
+.footer__social-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  gap: 48px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  min-height: 100%;
+}
