--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-body {
-  background-color: rgb(220, 220, 220);
-}
-
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
@@ -77,9 +73,13 @@ body {
   list-style: circle;
 }
 
-.header__link_active {
+
+.header__links-list-item:first-child { 
+  list-style: none; 
+}
+
+.link_active {
   text-decoration: none;
-  list-style-type: none;
 }
 
 .address {
@@ -100,7 +100,7 @@ body {
   z-index: 1;
   width: 100%;
   height: 100%;
-  background-color: rgb(0, 0, 0 , .5);
+  background-color: rgb(0, 0, 0 , .6);
 }
 
 .section_content {
@@ -154,7 +154,7 @@ body {
   border: 1px solid white;
   padding: 12px 32px 11px 31px;
   color: #fff;
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
   background: transparent;
 }
@@ -214,24 +214,20 @@ ul {
   flex-direction: column;
   justify-content: space-between;
   padding: 48px 40px;
+  background-position: center;
+  background-size: cover;
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
 .card__title {
@@ -260,7 +256,7 @@ ul {
   height: 240px;
   margin-top: 35px;
   margin-left: 47px;
-  border-radius: 240px;
+  border-radius: 50%;
   background-color: #000;
 }
 
@@ -291,7 +287,7 @@ ul {
 }
 
 .footer__menu-link {
-  text-decoration: underline;
+  text-underline-offset: 4px;
 }
 
 .footer__social-list {
